// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionsCTA components:  Container:  should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="component__Container-sc-1il1g34-0 cPvqyc"
  />
</DocumentFragment>
`;

exports[`MissionsCTA components:  Image:  should match the snapshot when text alignment is LTR 1`] = `
<DocumentFragment>
  <img
    class="component__Image-sc-1il1g34-1 jvlmtg"
  />
</DocumentFragment>
`;

exports[`MissionsCTA components:  Image:  should match the snapshot when text alignment is RTL 1`] = `
<DocumentFragment>
  <img
    class="component__Image-sc-1il1g34-1 jDFJOF"
  />
</DocumentFragment>
`;
